--- a/estilo.css
+++ b/estilo.css
@@ -39,8 +39,10 @@ body {
 header{
     width: 100%;
     height: 5em;
+    opacity: 1;
     position:fixed;
     display:flex;
+    z-index:10;
     align-items: center;
     background-color: white;
     border-bottom: solid black 1px;
@@ -66,9 +68,11 @@ header label {
 
 .menuNav {
     position: absolute;
-   right: 0;
+    right: 0;
 
-   background-color:black;
+    z-index:10;
+
+    background-color:black;
     width: 30%;
     margin-right: -31%;
 }
@@ -81,12 +85,15 @@ header label {
 .menuNav ul li a:hover {
     color: black;
     transition-delay:0.1s ;
-    }
+}
+
 .menuNav ul li {
     width: 100%;
     text-align:left;
     padding:0;
     border-right:0px;
+    font-size: 1.10em;
+    letter-spacing: 1px;
 }
 
 header label {
@@ -97,6 +104,7 @@ header label {
 .menuNav ul {
     display:flex;
     flex-direction: column;
+    padding-inline-start: 0;
 }
 
 
@@ -110,17 +118,9 @@ header label {
     color: white;
 }
 
-.menuNav ul li{
-    font-size: 1.10em;
-
-    letter-spacing: 1px;
-}
-
 ul li{
     list-style: none;
 }
-
-
 
 #menuIcon {
     width: 100%;
@@ -143,7 +143,7 @@ header label:hover {
 
 
 #botonMenu:checked ~ .menuNav {
-    margin-top: 12em;
+    margin-top: 15em;
     margin-right: 0;
 }
 
@@ -173,19 +173,21 @@ main section div {
 
 
 
+
 /*Seccion "Seguinos en nuestras redes sociales"*/
 #redesSocialesSeguinos {
-    display: none;
+    display: block;
     text-align: center;
     font-size: smaller;
     font-family: 'Open Sans', sans-serif;
     letter-spacing: 1px;
-    position: fixed;
-    bottom: 0px;
-    right: 0px;
     background-image:linear-gradient(#585858,black) ;
     color: white;
     
+}
+
+#redesSocialesSeguinos h2 {
+    display: none;
 }
 .iconosRedes:hover{
     border: white 2px solid;
@@ -203,7 +205,7 @@ main section div {
 }
 
 #redesSocialesSeguinos ul {
-    display: block;
+    display: inline-flex;
 }
 
 /*Staff*/
@@ -282,12 +284,14 @@ main video{
 
 #flyerSintamosnosLibres{
     margin:0 auto;
-    width: 75%;
+    width: 100%;
     padding-top: 20px;
 }
 
 #flyerSintamosnosLibres img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 #videoPresentacionFrangi{
@@ -306,6 +310,22 @@ main video{
     margin-bottom: 0.75em;
 }
 
+#demo {
+    padding-top: 1.5em;
+    margin-bottom: 2em;
+    grid-column: 1/3;
+}
+
+.galeria {
+    padding-top: 3em;
+    grid-column: 1/3;
+}
+
+.carousel-item img {
+    width: 100%;
+    max-height: 600px;
+    object-fit: cover;
+}
 
 
 /*scouting*/
@@ -401,7 +421,7 @@ footer div {
 }
 
 #logoAlteraPieDePag{
-    width: 20%;
+    width: 7em;
 }
 
 
@@ -454,8 +474,32 @@ footer div {
 
     #redesSocialesSeguinos {
         display: block;
+        position: fixed;
+        bottom: 0px;
+        right: 0px;
+        z-index: 10;
     }
-        
+
+    #redesSocialesSeguinos h3 {
+        display: none;
+    }
+
+
+    #redesSocialesSeguinos h2 {
+        display: block;
+        font-size: 1em;
+    }
+
+
+    #redesSocialesSeguinos ul {
+        display: block;
+        padding-right: 8px;
+        padding-left: 0px;
+    }
+    #redesSocialesSeguinos ul li{
+    padding-bottom: 6px;
+
+    }
 }
 
 @media only screen and (min-width: 768px) {
@@ -472,11 +516,10 @@ header {
 }
 
 .menuNav {
-    padding-left: 4em;
-     margin: 0;
-    background-color: white;
-     width: auto;
+    margin-left: 4em;
     margin: 0;
+    background-color: white;
+    width: auto;
 }
         
 .menuNav ul {
@@ -485,7 +528,7 @@ header {
         }
         
 .menuNav ul li{
-    font-size: 1.10em;
+    font-size: 1.25em;
     letter-spacing: 2px;
     border-right: black solid 1px;
 }
