--- a/estilo.css
+++ b/estilo.css
@@ -199,9 +199,10 @@ main section div {
     
 }
 
-#redesSocialesSeguinos h2 {
+#textDesk{
     display: none;
 }
+
 .iconosRedes:hover{
     border: white 2px solid;
 }
@@ -236,8 +237,7 @@ main section div {
     height: 250px;
     grid-column: 1/5;
     background-image:linear-gradient(#585858,black);
-    /*padding: 2px;*/
-    text-align: center; /* No se pudo prescindir de esta propiedad usando align self*/
+    text-align: center; 
 
 }
 
@@ -493,12 +493,11 @@ footer div {
         z-index: 10;
     }
 
-    #redesSocialesSeguinos h3 {
+    #textMobile {
         display: none;
     }
 
-
-    #redesSocialesSeguinos h2 {
+    #textDesk {
         display: block;
         font-size: 1em;
     }
