--- a/estilo.css
+++ b/estilo.css
@@ -418,23 +418,52 @@ textarea {
 }
 
 /*pie de pagina*/
+
 #pieDePagina{
+    display: grid;
+    grid-template-columns: 0.4fr 0.6fr;
+    grid-template-rows: 0.3fr 0.3fr; 
+    justify-items: center;
+    text-align: center;
     width: 100%;
-    height: 20em ;
-    color: white;
+    height: 38em ;
     background-color:#585858;
     font-family:'Open Sans', sans-serif;
-    font-size: 0.8em;
-    text-align: center;
+    font-size: 0.9em;
+    letter-spacing: 1px;
+    color: white;
     letter-spacing: 1px;
 }
 
-footer div {
-    width: 100%;
+#copyright{
+    grid-column: 1/3;
+    padding-top: 1.5em;
+}
+
+#vinculosFooter {
+    grid-column: 1/3;
+}
+
+#vinculosFooter li a {
+    text-decoration: none;
+    display: block;
+    letter-spacing: 1px;
+    color: white;
+}
+
+#vinculosFooter li :hover {
+    text-decoration: underline;
 }
 
 #logoAlteraPieDePag{
     width: 7em;
+    grid-column: 1/3;
+}
+
+#mapaGoogle {
+    width: 95%;
+    height: 80%;
+    grid-column: 1/3;
 }
 
 
@@ -572,6 +601,30 @@ text-decoration: underline;
     max-height: 400px;
 }
 
+/*Footer*/
+
+#pieDePagina {
+    height: 300px;
+}
+
+#mapaGoogle{
+    grid-column: 1/2;
+    grid-row: 1/3;
+    padding-top: 2em;
+}
+
+#logoAlteraPieDePag {
+    grid-column: 2/3;
+}
+
+
+#vinculosFooter {
+    grid-column: 2/3;
+}
+
+#copyright {
+    grid-column: 2/3;
+}
 
 }
 
