--- a/estilo.css
+++ b/estilo.css
@@ -338,9 +338,20 @@ main video{
 .carousel-item img {
     width: 100%;
     height: 300px ;
-    object-fit:scale-down;
+    object-fit: contain;
 }
 
+#grillaMarcas {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 1fr;
+    grid-gap: 10px;
+}
+
+.iconoMarca {
+    width: 150px;
+    height: auto;
+}
 
 /*scouting*/
 
@@ -512,6 +523,10 @@ textarea {
         margin: 0;
         width: 230px;
         height: 300px;
+    }
+
+    #Marcas {
+        grid-column: 1/3;
     }
 
     #redesSocialesSeguinos {
