--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -18,7 +18,6 @@
 }
 
 .titulo {
-  text-align: left;
   color: #343A40;
   font-weight: bold;
   font-size: 1.5em;
@@ -30,6 +29,14 @@
 
 .negrita {
   font-weight: bold;
+}
+
+.alinearIzq {
+  text-align: left;
+}
+
+.alinearCentro {
+  text-align: center;
 }
 
 /*Estilos generales*/
@@ -67,7 +74,7 @@ main {
 main p {
   letter-spacing: 0.5px;
   font-family: "Open Sans", sans-serif;
-  font-size: 1em;
+  font-size: 1.1em;
 }
 main ul {
   font-family: "Open Sans", sans-serif;
@@ -109,7 +116,7 @@ header {
   word-spacing: 3px;
   font-family: "Roboto", sans-serif;
   font-size: 1.15em;
-  min-height: 17vh;
+  min-height: 16vh;
 }
 
 /*Seccion "Seguinos en nuestras redes sociales"*/
@@ -350,6 +357,10 @@ textarea {
   object-fit: contain;
 }
 
+#Marcas {
+  padding-top: 1em;
+}
+
 #grillaMarcas {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -363,4 +374,151 @@ textarea {
 .iconoMarca {
   width: 100%;
   height: auto;
+}
+
+/*Medias query*/
+/* Pantallas a partir de 465px*/
+@media only screen and (min-width: 465px) {
+  /*Tipografia*/
+  .epigrafe {
+    color: black;
+  }
+
+  /*Home*/
+  body {
+    padding-top: 5.7em;
+  }
+
+  #videoPresentacionFrangi {
+    width: 100%;
+    height: 320px;
+    margin-bottom: 30px;
+  }
+
+  /*Redes sociales*/
+  #redesSocialesSeguinos {
+    display: block;
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    z-index: 10;
+  }
+  #redesSocialesSeguinos ul {
+    display: block;
+    padding-right: 8px;
+    padding-left: 0px;
+  }
+  #redesSocialesSeguinos ul li {
+    padding-bottom: 6px;
+  }
+
+  #textMobile {
+    display: none;
+  }
+
+  #textDesk {
+    display: block;
+    font-size: 1em;
+  }
+}
+/*PANTALLAS A PARTIR DE 576px*/
+@media only screen and (min-width: 576px) {
+  /*Home*/
+  #videoPresentacionFrangi {
+    width: 350px;
+    height: 400px;
+  }
+
+  #flyerSintamosnosLibres {
+    width: 350px;
+    height: 400px;
+  }
+}
+/*PANTALLAS A PARTIR DE 768px*/
+@media only screen and (min-width: 768px) {
+  .titulo {
+    letter-spacing: 1.25px;
+    font-size: 2em;
+  }
+
+  /*Footer*/
+  #pieDePagina {
+    height: 300px;
+  }
+
+  #mapaGoogle {
+    grid-column: 1/2;
+    grid-row: 1/3;
+    padding-top: 2em;
+  }
+
+  #logoAlteraPieDePag {
+    grid-column: 2/3;
+  }
+
+  #vinculosFooter {
+    grid-column: 2/3;
+  }
+
+  #copyright {
+    grid-column: 2/3;
+  }
+}
+/*PANTALLAS A PARTIR DE 992px*/
+@media only screen and (min-width: 992px) {
+  /*Home*/
+  #ContainerHome {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  #ContainerHome h4 {
+    grid-column: 2/3;
+  }
+
+  .slideHome {
+    height: 300px;
+    grid-column: 1/4;
+  }
+
+  #flyerSomosUnaComunidad {
+    height: 100%;
+  }
+
+  #flyerSintamosnosLibres {
+    width: 100%;
+    height: 100%;
+  }
+
+  #nosotros {
+    grid-column: 1/3;
+  }
+
+  #videoPresentacionFrangi {
+    width: 80%;
+    max-height: 400px;
+    grid-column: 1/2;
+  }
+
+  #vision {
+    grid-column: 2/4;
+    grid-row: 4/5;
+  }
+
+  #Marcas {
+    grid-column: 1/5;
+    margin-top: 2em;
+  }
+
+  #grillaMarcas {
+    grid-template-columns: repeat(8, 1fr);
+  }
+
+  #demo {
+    grid-column: 2/3;
+  }
+
+  .carousel-item {
+    width: -webkit-max-content;
+    width: max-content;
+  }
 }
