--- a/SCSS/_tipografias.scss
+++ b/SCSS/_tipografias.scss
@@ -26,7 +26,6 @@
 }
 
 .titulo {
-    text-align: left;
     color: #343A40;
 
     font: {
@@ -39,6 +38,15 @@
     letter-spacing: 1px;
     border-bottom: 1.5px solid black;
 }
+
 .negrita {
     font-weight: bold;
+}
+
+.alinearIzq {
+    text-align: left;
+}
+
+.alinearCentro {
+    text-align: center;
 }
