--- a/SCSS/mediaquery.scss
+++ b/SCSS/mediaquery.scss
@@ -107,6 +107,10 @@
 /*PANTALLAS A PARTIR DE 992px*/
 
 @media only screen and (min-width: 992px){
+    
+    body {
+        padding-top: 7em;
+    }
 
     /*Home*/
     
