--- a/SCSS/_staff.scss
+++ b/SCSS/_staff.scss
@@ -5,7 +5,7 @@
     padding-top: 0.5em;
 
     grid-template: { 
-        columns: 1fr .5fr .5fr 1fr;
+        columns: 1fr;
         rows: 1fr;
     };
 
@@ -13,26 +13,15 @@
     justify-items: center;
 }
 
-.item {
-    height: 250px;
-    grid-column: 1/5;
-    background-image:linear-gradient(#585858,black);
-    text-align: center; 
-
+.card {
+    img {
+        width: 100%;
+        height: 280px;
+    }
 }
 
-.item img {
-    width: 15%;
-}
-
-.item p {
+.card-body{
+    text-align: center;
     color: white;
-}
-
-.encabezadoItem {
-    grid-column: 1/5;
-}
-
-.nati{
-    grid-row: 11/12;
+    background-color:#8a817c;
 }
